dile pasure na commit

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jethro - Portfolio</title>
+    <title>Annalyn - Portfolio</title>
     <link rel="stylesheet" href="annal.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Jethro</h1>
-            <p>Basin Web Developer</p>
+            <h1>Annalyn</h1>
+            <p>Legit Web Developer</p>
             <nav>
                 <ul>
                     <li><a href="#" onclick="navigateTo('home')">Home</a></li>
@@ -28,20 +28,20 @@
 
     <main id="about" class="container" style="display: none;">
         <h2>About Me</h2>
-        <p>ako ang pinaka malas na tao sa tibouk kalibotan</p>
-        <p></p>
+        <p>im so cuteeee!!!!! ayg pag bout</p>
+        <p>i like Gian </p>
     </main>
 
     <main id="projects" class="container" style="display: none;">
         <h2>Projects</h2>
-        <p>wala pa nahuman</p>
+        <p></p>
         <div class="project">
             <h3>Project 1</h3>
-            <p>wala pa nahuman</p>
+            <p></p>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>hapit na mahuman</p>
+            <p></p>
         </div>
     </main>
 
