--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h2>About Me</h2>
         <p>im so cuteeee!!!!! ayg pag bout</p>
         <p>i like Gian </p>
+        <p>dile ko gapanumbag ug panghapak swear to god!! </p>
     </main>
 
     <main id="projects" class="container" style="display: none;">
